Further improvements to 15.6 blog post
**what is the change?:**
- Reword heading about deprecation warning changes
- add 'br' s to the list of installation options
- add some stray missing backticks

**why make this change?:**
Clarity and readability

**test plan:**
Visual inspection

**issue:**
https://github.com/facebook/react/issues/9398

--- a/docs/_posts/2017-06-13-react-v15.6.0.md
+++ b/docs/_posts/2017-06-13-react-v15.6.0.md
@@ -10,7 +10,7 @@ Today we are releasing React 15.6.0. As we prepare for React 16.0, we have been 
 In React 15.6.0 the `onChange` event for inputs is a little bit more reliable and handles more edge cases, including the following:
 
 * not firing when radio button is clicked but not changed ([issue 1471](https://github.com/facebook/react/issues/1471))
-* changing an input of type 'range' with the arrow keys ([issue 554](https://github.com/facebook/react/issues/554))
+* changing an input of type `range` with the arrow keys ([issue 554](https://github.com/facebook/react/issues/554))
 * pasting text into a text area in IE11 ([issue 7211](https://github.com/facebook/react/issues/7211))
 * auto-fill in IE11 ([issue 6614](https://github.com/facebook/react/issues/6614))
 * clearing input with 'x' button or right-click 'delete' in IE11 ([issue 6822](https://github.com/facebook/react/issues/6822))
@@ -18,7 +18,7 @@ In React 15.6.0 the `onChange` event for inputs is a little bit more reliable an
 
 Thanks to [Jason Quense](https://github.com/jquense) and everyone who helped out on those issues and PRs.
 
-## Downgrading Deprecation Warnings
+## Less Noisy Deprecation Warnings
 
 We are also including a couple of new warnings for upcoming deprecations. These should not affect most users, and for more details see the changelog below.
 
@@ -44,22 +44,22 @@ npm install --save react@^15.6.0 react-dom@^15.6.0
 
 We recommend using a bundler like [webpack](https://webpack.js.org/) or [Browserify](http://browserify.org/) so you can write modular code and bundle it together into small packages to optimize load time.
 
-Remember that by default, React runs extra checks and provides helpful warnings in development mode. When deploying your app, make sure to [use the production build](https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build).
+Remember that by default, React runs extra checks and provides helpful warnings in development mode. When deploying your app, make sure to [use the production build](/react/docs/optimizing-performance.html#use-the-production-build).
 
 In case you don't use a bundler, we also provide pre-built bundles in the npm packages which you can [include as script tags](/react/docs/installation.html#using-a-cdn) on your page:
 
-* **React**
-  Dev build with warnings: [react/dist/react.js](https://unpkg.com/react@15.6.0/dist/react.js)
-  Minified build for production: [react/dist/react.min.js](https://unpkg.com/react@15.6.0/dist/react.min.js)
-* **React with Add-Ons**
-  Dev build with warnings: [react/dist/react-with-addons.js](https://unpkg.com/react@15.6.0/dist/react-with-addons.js)
-  Minified build for production: [react/dist/react-with-addons.min.js](https://unpkg.com/react@15.5.0/dist/react-with-addons.min.js)
-* **React DOM** (include React in the page before React DOM)
-  Dev build with warnings: [react-dom/dist/react-dom.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom.js)
-  Minified build for production: [react-dom/dist/react-dom.min.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom.min.js)
-* **React DOM Server** (include React in the page before React DOM Server)
-  Dev build with warnings: [react-dom/dist/react-dom-server.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom-server.js)
-  Minified build for production: [react-dom/dist/react-dom-server.min.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom-server.min.js)
+* **React**<br/>
+  Dev build with warnings: [react/dist/react.js](https://unpkg.com/react@15.6.0/dist/react.js)<br/>
+  Minified build for production: [react/dist/react.min.js](https://unpkg.com/react@15.6.0/dist/react.min.js)<br/>
+* **React with Add-Ons**<br/>
+  Dev build with warnings: [react/dist/react-with-addons.js](https://unpkg.com/react@15.6.0/dist/react-with-addons.js)<br/>
+  Minified build for production: [react/dist/react-with-addons.min.js](https://unpkg.com/react@15.5.0/dist/react-with-addons.min.js)<br/>
+* **React DOM** (include React in the page before React DOM)<br/>
+  Dev build with warnings: [react-dom/dist/react-dom.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom.js)<br/>
+  Minified build for production: [react-dom/dist/react-dom.min.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom.min.js)<br/>
+* **React DOM Server** (include React in the page before React DOM Server)<br/>
+  Dev build with warnings: [react-dom/dist/react-dom-server.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom-server.js)<br/>
+  Minified build for production: [react-dom/dist/react-dom-server.min.js](https://unpkg.com/react-dom@15.6.0/dist/react-dom-server.min.js)<br/>
 
 We've also published version `15.6.0` of `react` and `react-dom` on npm, and the `react` package on bower.
 
