--- a/AUTHORS
+++ b/AUTHORS
@@ -61,7 +61,7 @@ Bartosz Kaszubowski <gosimek@gmail.com>
 Basarat Ali Syed <basaratali@gmail.com>
 Battaile Fauber <battaile@gmail.com>
 Beau Smith <beau@beausmith.com>
-Ben Alpert <ben@benalpert.com>
+Sophie Alpert <git@sophiebits.com>
 Ben Anderson <banderson@constantcontact.com>
 Ben Brooks <ben@benbrooks.net>
 Ben Foxall <benfoxall@gmail.com>
