--- a/docs/_posts/2013-06-05-why-react.md
+++ b/docs/_posts/2013-06-05-why-react.md
@@ -30,7 +30,7 @@ to render views, which we see as an advantage over templates for a few reasons:
   **no manual string concatenation** and therefore less surface area for XSS
   vulnerabilities.
 
-We've also created [JSX](/react/docs/jsx-in-depth.html), an optional syntax
+We've also created [JSX](/docs/jsx-in-depth.html), an optional syntax
 extension, in case you prefer the readability of HTML to raw JavaScript.
 
 ## Reactive updates are dead simple.
