--- a/docs/_posts/2014-02-20-react-v0.9.md
+++ b/docs/_posts/2014-02-20-react-v0.9.md
@@ -24,7 +24,7 @@ We've also published version `0.9.0` of the `react` and `react-tools` packages o
 
 This version includes better support for normalizing event properties across all supported browsers so that you need to worry even less about cross-browser differences. We've also made many improvements to error messages and have refactored the core to never rethrow errors, so stack traces are more accurate and Chrome's purple break-on-error stop sign now works properly.
 
-We've also added to the add-ons build [React.addons.TestUtils](/react/docs/test-utils.html), a set of new utilities to help you write unit tests for React components. You can now simulate events on your components, and several helpers are provided to help make assertions about the rendered DOM tree.
+We've also added to the add-ons build [React.addons.TestUtils](/docs/test-utils.html), a set of new utilities to help you write unit tests for React components. You can now simulate events on your components, and several helpers are provided to help make assertions about the rendered DOM tree.
 
 We've also made several other improvements and a few breaking changes; the full changelog is provided below.
 
