Fixed author frontmatter after master merge

--- a/docs/_posts/2017-09-26-react-v16.0.md
+++ b/docs/_posts/2017-09-26-react-v16.0.md
@@ -1,6 +1,6 @@
 ---
 title: "React v16.0"
-author: acdlite
+author: [acdlite]
 ---
 
 We're excited to announce the release of React v16.0! Among the changes are some long-standing feature requests, including [**fragments**](#new-render-return-types-fragments-and-strings), [**error boundaries**](#better-error-handling), [**portals**](#portals), support for [**custom DOM attributes**](#support-for-custom-dom-attributes), improved [**server-side rendering**](#better-server-side-rendering), and [**reduced file size**](#reduced-file-size).
