--- a/AUTHORS
+++ b/AUTHORS
@@ -1129,3 +1129,4 @@ zwhitchcox <zwhitchcox@gmail.com>
 张敏 <cookfront@gmail.com>
 王晓勇 <Plortinus@gmail.com>
 龙海燕 <1250766229@qq.com>
+Utkarsh Makik<utkarshmalik31@gmail.com>
